--- a/javascript/reactApp/reactRuduxApp/redux-project/package.json
+++ b/javascript/reactApp/reactRuduxApp/redux-project/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "notes-app",
+  "name": "redux-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,11 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.17",
+    "@reduxjs/toolkit": "^2.11.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.6",
-    "tailwindcss": "^4.1.17"
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
