--- a/backend/EcommerceApp/server/.env
+++ b/backend/EcommerceApp/server/.env
@@ -1,2 +1,3 @@
 MONGODB_URI=mongodb+srv://omkarbharitkar79_db_user:fOOzsvIQpMDiTvV2@cluster0.gmz9qly.mongodb.net/?appName=Cluster0
 JWT_SECRET=your_jwt_secret_key
+FRONTEND_URL=https://fsd-b8-git-github.vercel.app
